kubernetes/manifests/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffee-system
  labels:
    name: coffee-system
